<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rateUs"
        android:title="@string/rate_us"
        app:showAsAction="never"/>
    <item
        android:id="@+id/terms"
        android:title="@string/terms_of_service"
        app:showAsAction="never"/>
    <item
        android:id="@+id/privacyPolicy"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/updateAppData"
        android:title="@string/update_app_data"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>


    <!--    <group android:checkableBehavior="single">-->

    <!--    </group>-->
</menu>