<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin_14"
    android:paddingRight="@dimen/margin_14"
    android:paddingTop="@dimen/margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--        <ImageView-->
        <!--            android:layout_width="@dimen/transaction_status_icon_width"-->
        <!--            android:layout_height="@dimen/transaction_status_icon_height"-->
        <!--            android:contentDescription="@string/payment_status_image"-->
        <!--            app:srcCompat="@drawable/ic_baseline_cancel_24" />-->

        <TextView
            android:id="@+id/tvPackageActivationFailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/failed_to_activate_package"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginBottom="@dimen/margin_8">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Possible reasons:"
                android:textStyle="bold"
                android:gravity="center_vertical"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_active_internet_connection"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invalid_mobile_money_number"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/insufficient_funds_in_your_account"
                    android:gravity="center_vertical"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/canceled_the_transaction"
                    android:gravity="center_vertical"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>