<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin_24"
    android:paddingEnd="@dimen/margin_24"
    android:paddingTop="@dimen/margin_8"
    android:paddingBottom="@dimen/margin_8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_agreement"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <Button
            android:id="@+id/btnTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/terms_of_service"
            android:textAllCaps="true"
            android:padding="@dimen/margin_4"
            android:layout_marginEnd="@dimen/margin_4"
            android:textSize="@dimen/text_size_12"
            android:layout_weight=".5"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text=" , "/>-->

        <Button
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/privacy_policy"
            android:layout_marginStart="@dimen/margin_4"
            android:padding="@dimen/margin_4"
            android:textAllCaps="true"
            android:textSize="@dimen/text_size_12"
            android:layout_weight=".54"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>