<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GeneticsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardQuestion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:contentPadding="8dp"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/color_primary">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp">
                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Replace with question"
                    android:textColor="@color/color_on_primary"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loBottomButtons">
        <ScrollView
            android:id="@+id/svTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <include
                android:id="@+id/geneticsTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/genetic_cross_tasks"/>
        </ScrollView>

        <ScrollView
            android:id="@+id/svCorrectAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <include
                android:id="@+id/geneticsCorrectAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/genetic_cross_correct_answers"/>
        </ScrollView>

        <ScrollView
            android:id="@+id/svUserAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <include
                android:id="@+id/geneticsUserAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/genetic_cross_user_answers"/>
        </ScrollView>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/loBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible">
        <androidx.cardview.widget.CardView
            android:id="@+id/loBtnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:text="@string/done"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/loBtnYourAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <Button
                    android:id="@+id/btnYourAnswers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:layout_weight="1"
                    android:text="@string/your_answers"
                    android:layout_marginEnd="4dp"
                    android:enabled="false"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <Button
                    android:id="@+id/btnCorrectAnswers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="56dp"
                    android:layout_weight="1"
                    android:text="@string/correct_answers"
                    android:layout_marginStart="4dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>